# python-boilerplate

./: pyproject.toml
.devcontainer/: devcontainer.json
